fix: Styling on mobile devices

--- a/style.css
+++ b/style.css
@@ -6,10 +6,17 @@
   }
 
   ul {
-    list-style: none;
-    padding-left: 5%;
-    padding-right: 5%;
-  }
+    list-style-type: none;
+    padding: 0;
+    padding-top: 50px;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+   }
+
 
   h2 a {
     margin-top: 0;
